tests/baselines/reference/classImplementsMethodWIthTupleArgs.errors.txt
tests/cases/compiler/classImplementsMethodWIthTupleArgs.ts(2,5): error TS2416: Property 'set' in type 'MySettable' is not assignable to the same property in base type 'Settable'.
  Type '{ (option: Record<string, unknown>): void; (name: string, value: unknown): void; }' is not assignable to type '(...args: [option: Record<string, unknown>] | [name: string, value: unknown] | [name: string]) => void'.
    Types of parameters 'option' and 'args' are incompatible.
      Type '[option: Record<string, unknown>] | [name: string, value: unknown] | [name: string]' is not assignable to type 'readonly [option: Record<string, unknown>]'.
        Type '[name: string, value: unknown]' is not assignable to type 'readonly [option: Record<string, unknown>]'.
          Source has 2 element(s) but target allows only 1.
tests/cases/compiler/classImplementsMethodWIthTupleArgs.ts(3,5): error TS2416: Property 'set' in type 'MySettable' is not assignable to the same property in base type 'Settable'.
  Type '{ (option: Record<string, unknown>): void; (name: string, value: unknown): void; }' is not assignable to type '(...args: [option: Record<string, unknown>] | [name: string, value: unknown] | [name: string]) => void'.


==== tests/cases/compiler/classImplementsMethodWIthTupleArgs.ts (2 errors) ====
    declare class MySettable implements Settable {
        set(option: Record<string, unknown>): void;
        ~~~
!!! error TS2416: Property 'set' in type 'MySettable' is not assignable to the same property in base type 'Settable'.
!!! error TS2416:   Type '{ (option: Record<string, unknown>): void; (name: string, value: unknown): void; }' is not assignable to type '(...args: [option: Record<string, unknown>] | [name: string, value: unknown] | [name: string]) => void'.
!!! error TS2416:     Types of parameters 'option' and 'args' are incompatible.
!!! error TS2416:       Type '[option: Record<string, unknown>] | [name: string, value: unknown] | [name: string]' is not assignable to type 'readonly [option: Record<string, unknown>]'.
!!! error TS2416:         Type '[name: string, value: unknown]' is not assignable to type 'readonly [option: Record<string, unknown>]'.
!!! error TS2416:           Source has 2 element(s) but target allows only 1.
        set(name: string, value: unknown): void;
        ~~~
!!! error TS2416: Property 'set' in type 'MySettable' is not assignable to the same property in base type 'Settable'.
!!! error TS2416:   Type '{ (option: Record<string, unknown>): void; (name: string, value: unknown): void; }' is not assignable to type '(...args: [option: Record<string, unknown>] | [name: string, value: unknown] | [name: string]) => void'.
    }
    
    interface Settable {
        set(...args: [option: Record<string, unknown>] | [name: string, value: unknown] | [name: string]): void;
    }
    